Version 3.0.0rc
- Improved signal handling

Version 3.0.0beta
- Workers can process many queues.

Version 2.2.3
- Update pg dependency to 0.17.0

Version 2.3.0beta [YANKED]
- Concurrent job processing.

Version 2.2.2
- Update pg dependency to 0.16.0

Version 2.2.1
- Force listen/notify on worker
- Notifications happen inside PostgreSQL trigger
- Add rake task for generating rails migrations
- Fix bug related to listening worker

Version 2.2.0
- Use json from the stdlib in place of MultiJson.
- Use postgresql's json type for the args column if json type is available
- QC::Worker#handle_failure logs the job and the error
- QC.default_queue= to set your own default queue. (can be used
  in testing to configure a mock queue)
- QC.log now reports time elapsed in milliseconds.

Version 2.1.4
- Update pg dependency to 0.15.1
- Document logging behaviour

Version 2.1.3
- Use MultiJson (Ezekiel Templin: #106)

Version 2.1.2
- Use 64bit ints as default data types in PostgreSQL
- Add process method in worker
- Allow percent-encoded socket paths in DATABASE_URL

Version 2.1.1
- Update pg gem version

Version 2.1.0
- Wrap connection execution in mutex making it thread safe
- Cleanup logging
- Refactor worker class making it more extensible
- Added rdoc style docs for worker class

Version 2.0.5
- Allow term signal to halt the lock_job function

Version 2.0.4
- Provider a connection setter.

Version 2.0.3
- Fix typo :(

Version 2.0.2
- Remove scrolls dependency
- Fix issue with notify not working on non-default queues

Version 2.0.1

Version 2.0.0
- Simpler setup via QC::Setup.create (rake qc:create) & QC::Setup.drop (rake
qc:drop)
- Simpler abstractions in implementation
- Better support for instrumentation via log_yield hook in QC module
- Multiple queues use one table with a queue_name column

Version 1.0.2
- Update to latest okjson as the current has bugs

Version 1.0.1
- Using OkJson instead of any sort of rubygem
- Remove html from docs
- Use parameterised queries